# pulsar

./: .gitignore  README.md  pyproject.toml
pulsar/: __init__.py  __main__.py  cli.py
pulsar/core/: ble.py  config.py  constants.py  database.py  hrm.py  state.py  zones.py
pulsar/web/: __init__.py  app.py
pulsar/web/static/: app.css  app.js  index.html
