[project]
name = "pulsar"
version = "0.2.0"
description = "Real-time heart rate monitoring for Polar H10 devices"
authors = [
    {name = "1223423", email = "bencerne@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
